force-app/main/default/objects/Child_Removal__c/Child_Removal__c.object-meta.xml
<CustomObject>
    <label>Child Removal</label>
    <nameField>
        <displayFormat>Child Removal- {0000000}</displayFormat>
        <label>Child Removal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Removals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>