force-app/main/default/objects/Child_Removal__c/fields/Add_Verfied__c.field-meta.xml
<CustomField>
    <fullName>Add_Verfied__c</fullName>
    <formula>IF(LEN(Address_Of_Primary_Caregiver__c) = 5,FALSE,TRUE)</formula>
    <label>Add Verified</label>
    <type>Checkbox</type>
</CustomField>