force-app/main/default/objects/Child_Removal__c/fields/Address_Of_Primary_Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Address_Of_Primary_Caregiver__c</fullName>
    <formula>IF(NOT(ISBLANK(Primary_Caregiver__c)),Primary_Caregiver__r.Address_Line_1__c &amp; &quot;,&quot; &amp; Primary_Caregiver__r.Address_Line_2__c &amp; &quot;,&quot; &amp;  Primary_Caregiver__r.Address_City__c  &amp;&quot;,&quot;&amp; TEXT( Primary_Caregiver__r.Address_State__c ) &amp;&quot;,&quot;&amp; TEXT(Primary_Caregiver__r.County_Address__c) &amp; &quot;,&quot; &amp; Primary_Caregiver__r.Address_ZipCode__c,&quot;,&quot;)</formula>
    <label>Address Of Primary Caregiver</label>
    <type>Text</type>
</CustomField>