force-app/main/default/objects/Child_Removal__c/fields/Address_Of_Secondary_Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Address_Of_Secondary_Caregiver__c</fullName>
    <formula>IF(NOT(ISBLANK(Secondary_Caregiver__c)),
Secondary_Caregiver__r.Address_Line_1__c &amp; &quot; &quot; &amp; Secondary_Caregiver__r.Address_Line_2__c &amp; &quot; &quot; &amp; Secondary_Caregiver__r.Address_City__c &amp;&quot; &quot;&amp; TEXT( Secondary_Caregiver__r.Address_State__c ) &amp;&quot; &quot;&amp; TEXT(Secondary_Caregiver__r.County_Address__c) &amp; &quot;&quot; &amp; Secondary_Caregiver__r.Address_ZipCode__c,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Of Secondary Caregiver</label>
    <type>Text</type>
</CustomField>