force-app/main/default/objects/Child_Removal__c/fields/Autism_Comments__c.field-meta.xml
<CustomField>
    <fullName>Autism_Comments__c</fullName>
    <label>Autism Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>