force-app/main/default/objects/Child_Removal__c/fields/Autism_Diagnosed_Diability__c.field-meta.xml
<CustomField>
    <fullName>Autism_Diagnosed_Diability__c</fullName>
    <label>Autism Diagnosed Diability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>