force-app/main/default/objects/Child_Removal__c/fields/Autism_End_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Autism_End_Resolution_Date__c</fullName>
    <label>Autism End/Resolution Date</label>
    <type>Date</type>
</CustomField>