force-app/main/default/objects/Child_Removal__c/fields/Autism_Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Autism_Evaluation_Date__c</fullName>
    <label>Autism Evaluation Date</label>
    <type>Date</type>
</CustomField>