force-app/main/default/objects/Child_Removal__c/fields/Autism_Start_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Autism_Start_Diagnosis_Date__c</fullName>
    <label>Autism Start/ Diagnosis Date</label>
    <type>Date</type>
</CustomField>