force-app/main/default/objects/Child_Removal__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((1 AND 2) OR (8 AND 9)) AND (3 OR 4 OR 5 OR 6 OR 7)</booleanFilter>
        <filterItems>
            <field>Contact.Service_Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Service_Case__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Service_Case__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Contact.Role_Formula__c</field>
            <operation>contains</operation>
            <value>1</value>
        </filterItems>
        <filterItems>
            <field>Contact.Role_Formula__c</field>
            <operation>contains</operation>
            <value>2</value>
        </filterItems>
        <filterItems>
            <field>Contact.Role_Formula__c</field>
            <operation>contains</operation>
            <value>3</value>
        </filterItems>
        <filterItems>
            <field>Contact.Role_Formula__c</field>
            <operation>contains</operation>
            <value>4</value>
        </filterItems>
        <filterItems>
            <field>Contact.Role_Formula__c</field>
            <operation>contains</operation>
            <value>5</value>
        </filterItems>
        <filterItems>
            <field>Contact.Investigation__c</field>
            <operation>equals</operation>
            <valueField>$Source.Investigation__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Investigation__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Child Removals</relationshipLabel>
    <relationshipName>Child_Removals</relationshipName>
    <type>Lookup</type>
</CustomField>