force-app/main/default/objects/Child_Removal__c/fields/Child_Home_Address_Same_as_Primary_Addre__c.field-meta.xml
<CustomField>
    <fullName>Child_Home_Address_Same_as_Primary_Addre__c</fullName>
    <inlineHelpText>Child Home Address Same as Primary Caregiver Address?</inlineHelpText>
    <label>Child Home Address Same as Primary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>