force-app/main/default/objects/Child_Removal__c/fields/Child_Removal_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Child_Removal_Approval_Status__c</fullName>
    <label>Child Removal Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>