force-app/main/default/objects/Child_Removal__c/fields/Cognitive_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cognitive_Comments__c</fullName>
    <label>Cognitive Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>