force-app/main/default/objects/Child_Removal__c/fields/Cognitive_Developmental_Delay__c.field-meta.xml
<CustomField>
    <fullName>Cognitive_Developmental_Delay__c</fullName>
    <label>Cognitive/Developmental Delay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>