force-app/main/default/objects/Child_Removal__c/fields/Cognitive_Diagnosed_Diability__c.field-meta.xml
<CustomField>
    <fullName>Cognitive_Diagnosed_Diability__c</fullName>
    <label>Cognitive Diagnosed Diability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>