force-app/main/default/objects/Child_Removal__c/fields/Cognitive_End_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Cognitive_End_Resolution_Date__c</fullName>
    <label>Cognitive End/Resolution Date</label>
    <type>Date</type>
</CustomField>