force-app/main/default/objects/Child_Removal__c/fields/Cognitive_Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cognitive_Evaluation_Date__c</fullName>
    <label>Cognitive Evaluation Date</label>
    <type>Date</type>
</CustomField>