force-app/main/default/objects/Child_Removal__c/fields/Cognitive_Evaluator_Clinician_Name__c.field-meta.xml
<CustomField>
    <fullName>Cognitive_Evaluator_Clinician_Name__c</fullName>
    <label>Cognitive Evaluator/ Clinician Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>