force-app/main/default/objects/Child_Removal__c/fields/Cognitive_Personal_Hygiene__c.field-meta.xml
<CustomField>
    <fullName>Cognitive_Personal_Hygiene__c</fullName>
    <label>Cognitive Personal Hygiene</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bathes Self</fullName>
            </value>
            <value>
                <fullName>Dresses Self</fullName>
            </value>
            <value>
                <fullName>Fixes Hair</fullName>
            </value>
            <value>
                <fullName>Other (Specify)</fullName>
            </value>
            <value>
                <fullName>Needs Assistance with Brushing Teeth</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Washes Hair</fullName>
            </value>
            <value>
                <fullName>Menstruation</fullName>
            </value>
            <value>
                <fullName>Needs Assistance with Bathing Self</fullName>
            </value>
            <value>
                <fullName>Needs Assistance with Dressing Self</fullName>
            </value>
            <value>
                <fullName>Needs Assistance with Fixing Hair</fullName>
            </value>
            <value>
                <fullName>Needs Assistance with Removing Clothes</fullName>
            </value>
            <value>
                <fullName>Needs Assistance with Using the Toilet</fullName>
            </value>
            <value>
                <fullName>Needs Assistance with Washing and Drying Hands</fullName>
            </value>
            <value>
                <fullName>Needs Assistance with Washing Hair</fullName>
            </value>
            <value>
                <fullName>Toilet Alone</fullName>
            </value>
            <value>
                <fullName>Toilet Trained</fullName>
            </value>
            <value>
                <fullName>Washes and Dries Hands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>