force-app/main/default/objects/Child_Removal__c/fields/Cognitive_Start_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Cognitive_Start_Diagnosis_Date__c</fullName>
    <label>Cognitive Start/ Diagnosis Date</label>
    <type>Date</type>
</CustomField>