force-app/main/default/objects/Child_Removal__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <label>Completed By</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Shelter_Authorization_Completed__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uploaded Manually</fullName>
            </value>
            <value>
                <fullName>Uploaded via System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>