force-app/main/default/objects/Child_Removal__c/fields/Emotionally_Comments__c.field-meta.xml
<CustomField>
    <fullName>Emotionally_Comments__c</fullName>
    <label>Emotionally Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>