force-app/main/default/objects/Child_Removal__c/fields/Emotionally_Diagnosed_Diability__c.field-meta.xml
<CustomField>
    <fullName>Emotionally_Diagnosed_Diability__c</fullName>
    <label>Emotionally Diagnosed Diability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>