force-app/main/default/objects/Child_Removal__c/fields/Emotionally_End_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Emotionally_End_Resolution_Date__c</fullName>
    <label>Emotionally End/Resolution Date</label>
    <type>Date</type>
</CustomField>