force-app/main/default/objects/Child_Removal__c/fields/Emotionally_Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Emotionally_Evaluation_Date__c</fullName>
    <label>Emotionally Evaluation Date</label>
    <type>Date</type>
</CustomField>