force-app/main/default/objects/Child_Removal__c/fields/Emotionally_Evaluator_Clinician_Name__c.field-meta.xml
<CustomField>
    <fullName>Emotionally_Evaluator_Clinician_Name__c</fullName>
    <label>Emotionally Evaluator/ Clinician Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>