force-app/main/default/objects/Child_Removal__c/fields/Emotionally_Start_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Emotionally_Start_Diagnosis_Date__c</fullName>
    <label>Emotionally Start/ Diagnosis Date</label>
    <type>Date</type>
</CustomField>