force-app/main/default/objects/Child_Removal__c/fields/Factor_At_Removal__c.field-meta.xml
<CustomField>
    <fullName>Factor_At_Removal__c</fullName>
    <label>Factors At Removal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abandonment</fullName>
            </value>
            <value>
                <fullName>Alcohol Abuse (Child)</fullName>
            </value>
            <value>
                <fullName>Alcohol Abuse (Parent)</fullName>
            </value>
            <value>
                <fullName>Caregiver&apos;s Inability to Cope Due to Illness or Other Reason</fullName>
            </value>
            <value>
                <fullName>Child&apos;s Behavior Problem</fullName>
            </value>
            <value>
                <fullName>Child&apos;s Disabilities</fullName>
            </value>
            <value>
                <fullName>Death of Parent(s)</fullName>
            </value>
            <value>
                <fullName>Drug Abuse(Child)</fullName>
            </value>
            <value>
                <fullName>Inadequate Housing</fullName>
            </value>
            <value>
                <fullName>Incarceration of Parent(s)</fullName>
            </value>
            <value>
                <fullName>Neglect</fullName>
            </value>
            <value>
                <fullName>Physical abuse</fullName>
            </value>
            <value>
                <fullName>Relinquishment for Adoption(incl. Safe Haven)</fullName>
            </value>
            <value>
                <fullName>Sexual Abuse</fullName>
            </value>
            <value>
                <fullName>Voluntary Placement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>