force-app/main/default/objects/Child_Removal__c/fields/Family_Structure__c.field-meta.xml
<CustomField>
    <fullName>Family_Structure__c</fullName>
    <label>Family Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Divorced Female</fullName>
            </value>
            <value>
                <fullName>Divorced Male</fullName>
            </value>
            <value>
                <fullName>Married Couple</fullName>
            </value>
            <value>
                <fullName>Separated Female</fullName>
            </value>
            <value>
                <fullName>Separated Male</fullName>
            </value>
            <value>
                <fullName>Single Female</fullName>
            </value>
            <value>
                <fullName>Single Female - Cohabitating with Father</fullName>
            </value>
            <value>
                <fullName>Single Male</fullName>
            </value>
            <value>
                <fullName>Single Male - Cohabitating with Mother</fullName>
            </value>
            <value>
                <fullName>Unable to Determine</fullName>
            </value>
            <value>
                <fullName>Unmarried Couple</fullName>
            </value>
            <value>
                <fullName>Unmarried Couple - One Parent Present</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>