force-app/main/default/objects/Child_Removal__c/fields/Hearing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Comments__c</fullName>
    <label>Hearing Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>