force-app/main/default/objects/Child_Removal__c/fields/Hearing_Diagnosed_Diability__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Diagnosed_Diability__c</fullName>
    <label>Hearing Diagnosed Diability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>