force-app/main/default/objects/Child_Removal__c/fields/Hearing_Disability__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Disability__c</fullName>
    <label>Hearing Disability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>