force-app/main/default/objects/Child_Removal__c/fields/Hearing_End_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Hearing_End_Resolution_Date__c</fullName>
    <label>Hearing End/Resolution Date</label>
    <type>Date</type>
</CustomField>