force-app/main/default/objects/Child_Removal__c/fields/Hearing_Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Evaluation_Date__c</fullName>
    <label>Hearing  Evaluation Date</label>
    <type>Date</type>
</CustomField>